--- a/weld/Cargo.toml
+++ b/weld/Cargo.toml
@@ -6,7 +6,9 @@ authors = ["Roy Jacobs <hello@royjacobs.org>"]
 [dependencies]
 gleam = "0.4.7"
 servo-glutin = "0.11"
-id_tree = "1.1.2"
+
+[dependencies.weld_core]
+path = "../weld-core"
 
 [dependencies.webrender_traits]
 git = "https://github.com/servo/webrender"
