--- a/weld-core/Cargo.toml
+++ b/weld-core/Cargo.toml
@@ -5,13 +5,16 @@ authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
 
 [dependencies]
 id_tree = "1.1.2"
-cassowary = "0.2.1"
 gleam = "0.4.7"
 servo-glutin = "0.11"
 euclid = "0.15.1"
+snowflake = "1.2"
 
 [dependencies.webrender_api]
 git = "https://github.com/servo/webrender"
 
 [dependencies.webrender]
 git = "https://github.com/servo/webrender"
+
+[dependencies.yoga]
+git = "https://github.com/bschwind/yoga-rs"
