--- a/weld-core/Cargo.toml
+++ b/weld-core/Cargo.toml
@@ -9,6 +9,7 @@ gleam = "0.4.7"
 servo-glutin = "0.11"
 euclid = "0.15.1"
 snowflake = "1.2"
+rand = "0.3"
 
 [dependencies.webrender_api]
 git = "https://github.com/servo/webrender"
