--- a/weld-core/Cargo.toml
+++ b/weld-core/Cargo.toml
@@ -10,6 +10,7 @@ glutin = "0.9.0"
 euclid = "0.15.1"
 snowflake = "1.2"
 rand = "0.3"
+log = "0.3"
 
 [dependencies.webrender]
 git = "https://github.com/servo/webrender"
